filter-INPUT-hitcount.v4
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP

-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 1 --name limit_443 --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -m recent --set --name limit_443 --mask 255.255.255.255 --rsource

-A INPUT -m tcp -p tcp -m multiport --dports  443,80 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -d 192.168.0.0/16 -j ACCEPT
-A INPUT -s YOUR_IP/32 -p tcp -m tcp -j ACCEPT
-A FORWARD -d 224.0.0.0/4 -j DROP
-A FORWARD -d 100.64.0.0/10 -j DROP
-A FORWARD -d 169.254.0.0/16 -j DROP
-A FORWARD -d 172.16.0.0/12 -j DROP
-A FORWARD -d 10.0.0.0/8 -j DROP
-A FORWARD -s 192.168.0.0/16 -d 192.168.0.0/16 -j DROP
-A FORWARD -d 141.101.64.0/24 -j DROP
-A FORWARD -d 173.245.48.0/20 -j DROP
-A FORWARD -d 142.250.181.226/32 -j DROP
-A FORWARD -d 64.233.167.188/32 -j DROP
-A FORWARD -j ACCEPT
-A OUTPUT -d 224.0.0.0/4 -j DROP
-A OUTPUT -d 100.64.0.0/10 -j DROP
-A OUTPUT -d 169.254.0.0/16 -j DROP
-A OUTPUT -d 172.16.0.0/12 -j DROP
-A OUTPUT -d 10.0.0.0/8 -j DROP
-A OUTPUT -d 141.101.64.0/24 -j DROP
-A OUTPUT -d 173.245.48.0/20 -j DROP
-A OUTPUT -j ACCEPT
