filter.v4
# Generated by iptables-save v1.8.4 on Sat Mar  9 21:14:09 2024
*filter
:INPUT ACCEPT [37949:3703069]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.0.0/16 -d 192.168.0.0/16 -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s your-ip/32 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443,80 -j ACCEPT
-A FORWARD -d 224.0.0.0/4 -j DROP
-A FORWARD -d 100.64.0.0/10 -j DROP
-A FORWARD -d 169.254.0.0/16 -j DROP
-A FORWARD -d 172.16.0.0/12 -j DROP
-A FORWARD -d 10.0.0.0/8 -j DROP
-A FORWARD -s 192.168.0.0/16 -d 192.168.0.0/16 -j DROP
-A FORWARD -d 141.101.64.0/24 -j DROP
-A FORWARD -d 173.245.48.0/20 -j DROP
-A FORWARD -j ACCEPT
-A OUTPUT -d 224.0.0.0/4 -j DROP
-A OUTPUT -d 100.64.0.0/10 -j DROP
-A OUTPUT -d 169.254.0.0/16 -j DROP
-A OUTPUT -d 172.16.0.0/12 -j DROP
-A OUTPUT -d 10.0.0.0/8 -j DROP
-A OUTPUT -d 141.101.64.0/24 -j DROP
-A OUTPUT -d 173.245.48.0/20 -j DROP
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Sat Mar  9 21:14:10 2024
